feat(testing): implement three-tier testing strategy across all language components
- Add unit, integration, and user simulation test sections to all language files
- Provide language-specific examples and best practices for each test level
- Include modern testing tools and frameworks for each language
- Add consistent test organization structure (tests/unit, tests/integration, tests/e2e)
- Update user-CLAUDE.md with comprehensive testing philosophy
- Reference Microsoft TUI Test for terminal application testing
- Add performance and property-based testing examples where applicable

BREAKING CHANGE: Testing sections now require three levels of tests (unit, integration, user simulation) instead of generic test commands